--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -50,7 +50,7 @@
     <table>
         <thead>
             <tr>
-                <th><i>DETAILS DES RECETTES</i></th>
+                <th><i>DETAILS DES INGREDIENTS PAR RECETTE</i></th>
                 <th>INGREDIENT</th>
                 <th>STOCK AV KG</th>
                 <th>QTE PLANIFIEE KG</th>
